unpackaged/main/default/objects/Test_Class_Default__mdt/Test_Class_Default__mdt.object-meta.xml
<CustomObject>
    <label>Test Class Default</label>
    <pluralLabel>Test Class Defaults</pluralLabel>
</CustomObject>