unpackaged/main/default/objects/Test_Class_Default__mdt/fields/Date_Value__c.field-meta.xml
<CustomField>
        <fullName>Date_Value__c</fullName>
        <label>Date Value</label>
        <type>Date</type>
    </CustomField>