unpackaged/main/default/objects/Test_Class_Default__mdt/fields/DateTime_Value__c.field-meta.xml
<CustomField>
        <fullName>DateTime_Value__c</fullName>
        <label>DateTime Value</label>
        <type>DateTime</type>
    </CustomField>