unpackaged/main/default/objects/Test_Class_Default__mdt/fields/Field__c.field-meta.xml
<CustomField>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <length>80</length>
        <type>Text</type>
    </CustomField>