unpackaged/main/default/objects/Test_Class_Default__mdt/fields/Is_Test__c.field-meta.xml
<CustomField>
        <fullName>Is_Test__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Test</label>
        <type>Checkbox</type>
    </CustomField>