unpackaged/main/default/objects/Test_Class_Default__mdt/fields/Lookup_Field__c.field-meta.xml
<CustomField>
        <fullName>Lookup_Field__c</fullName>
        <label>Lookup Field</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>