unpackaged/main/default/objects/Test_Class_Default__mdt/fields/Lookup_Value__c.field-meta.xml
<CustomField>
        <fullName>Lookup_Value__c</fullName>
        <label>Lookup Value</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>