unpackaged/main/default/objects/Test_Class_Default__mdt/fields/Number_Value__c.field-meta.xml
<CustomField>
        <fullName>Number_Value__c</fullName>
        <label>Number Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>