unpackaged/main/default/objects/Test_Class_Default__mdt/fields/Object__c.field-meta.xml
<CustomField>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>80</length>
        <type>Text</type>
    </CustomField>