unpackaged/main/default/objects/Test_Class_Default__mdt/fields/Picklist_Value__c.field-meta.xml
<CustomField>
        <fullName>Picklist_Value__c</fullName>
        <label>Picklist Value</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>