unpackaged/main/default/objects/Test_Class_Default__mdt/fields/Text_Area_Value__c.field-meta.xml
<CustomField>
        <fullName>Text_Area_Value__c</fullName>
        <label>Text Area Value</label>
        <type>TextArea</type>
    </CustomField>