unpackaged/main/default/objects/Test_Class_Default__mdt/fields/Text_Value__c.field-meta.xml
<CustomField>
        <fullName>Text_Value__c</fullName>
        <label>Text Value</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>