unpackaged/main/default/objects/Test_Class_Default__mdt/fields/URL_Value__c.field-meta.xml
<CustomField>
        <fullName>URL_Value__c</fullName>
        <label>URL Value</label>
        <type>Url</type>
    </CustomField>